[package]
name = "eth-recovery"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eth_recovery"
path = "src/main.rs"

[dependencies]
# OpenCL для GPU
ocl = "0.19"
ocl-core = "0.11"

# Ethereum криптография
tiny-keccak = { version = "2.0", features = ["keccak"] }
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
secp256k1 = { version = "0.28", features = ["global-context", "rand-std"] }

# Утилиты
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
